This is the most current changes file for PennMUSH. Please look it
over; each version contains new things which might significantly
affect the function of your server.  Changes are reported in reverse
chronological order (most recent first)

[SW] is Shawn Wagner, a PennMUSH developer (aka Raevnos), also
 responsible for most unattributed changes.
[GM] is Greg Millam, a PennMUSH developer (aka Walker)
[MG] is Mike Griffiths, a PennMUSH developer (aka Talvo)
[TK] is Tim Krajcar, a PennMUSH developer (aka Rince)
[3] refers to code by (or inspired by) TinyMUSH 3.0
[MUX] refers to code by (or inspired by) TinyMUX 2.x
[Rhost] refers to code by (or inspired by) RhostMUSH

Numbers next to the developer credit refer to Github issue numbers.

==========================================================================

Version 1.8.6 patchlevel 0                                 ?? ??, 201?

Major changes:
 * Hosted on Github. Thanks, Google. [DC]

Functions:
 * element() is now an alias for match(). Suggested by Wiggles. [985-TK]

Hardcode:
 * Clean up some more remnants of the previous configure package's
   naming convention in favor of autoconf style ones. [SW]
 * OpenBSD compilation fixes. [SW]
 * Support authorization of ssl_slave forwarded connections on NetBSD,
   OpenBSD. [SW]
 * Remove old FAM-based file monitoring code, due to bitrot and FAM's last
   release being 2003. [SW]
 * Remove ancient @channel foo=on behavior. Reported by Paige. [870-TK]
 * Add git revision, if present, to @version & version(). [994-TK]